--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: 22
           script: |
-            cd /Ecom-UI
+            cd Ecom-UI
             git fetch origin
             git reset --hard origin/production
             npm install
