--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "next": "12.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-modal": "^3.16.3"
   },
   "devDependencies": {
     "@sanity/client": "^3.3.6",
@@ -20,6 +21,7 @@
     "@types/node": "18.7.16",
     "@types/react": "18.0.18",
     "@types/react-dom": "18.0.6",
+    "@types/react-modal": "^3.16.3",
     "eslint": "8.23.0",
     "eslint-config-next": "12.2.5",
     "next-sanity-image": "^4.1.0",
