--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "flowbite": "^3.1.2",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -22,12 +23,15 @@
     "@types/react": "18.0.18",
     "@types/react-dom": "18.0.6",
     "@types/react-modal": "^3.16.3",
+    "autoprefixer": "^10.4.21",
     "eslint": "8.23.0",
     "eslint-config-next": "12.2.5",
     "next-sanity-image": "^4.1.0",
+    "postcss": "^8.5.6",
     "react-hot-toast": "^2.3.0",
     "react-icons": "^4.4.0",
     "stripe": "^10.8.0",
+    "tailwindcss": "^3.4.1",
     "typescript": "4.8.2"
   }
 }
