--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.11",
+    "firebase": "^12.0.0",
+    "firebase-admin": "^13.4.0",
     "motion": "^12.23.6",
     "next": "12.2.5",
+    "postcss": "^8.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-modal": "^3.16.3"
+    "react-modal": "^3.16.3",
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
-    "@sanity/client": "^3.3.6",
+    "@sanity/client": "^3.4.1",
     "@sanity/image-url": "^1.0.1",
     "@stripe/stripe-js": "^1.35.0",
     "@types/node": "18.7.16",
