--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tailwindcss/postcss": "^4.1.11",
+    "autoprefixer": "^10.4.21",
     "firebase": "^12.0.0",
     "firebase-admin": "^13.4.0",
     "motion": "^12.23.6",
@@ -17,8 +17,7 @@
     "postcss": "^8.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-modal": "^3.16.3",
-    "tailwindcss": "^4.1.11"
+    "react-modal": "^3.16.3"
   },
   "devDependencies": {
     "@sanity/client": "^3.4.1",
@@ -34,6 +33,11 @@
     "react-hot-toast": "^2.3.0",
     "react-icons": "^4.4.0",
     "stripe": "^10.8.0",
+    "tailwindcss": "^3.4.17",
     "typescript": "4.8.2"
-  }
+  },
+  "main": "index.js",
+  "repository": "https://github.com/JONNYDAN/Ecom-UI.git",
+  "author": "JONNYDAN <tuannobi44@gmail.com>",
+  "license": "MIT"
 }
