--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
     "**/*.ts",
     "**/*.tsx",
     "lib/client.js"
-, "pages/api/stripe.js"  ],
+, "pages/api/stripe.js", "lib/migrateSanityToFirestore.js"  ],
   "exclude": [
     "node_modules"
   ]
