change api/onepay.js for testing the param; add onepay-return for test if it return anything. change the .env from the info got in https://mtf.onepay.vn/developer/?page=modul_noidia

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
     "**/*.ts",
     "**/*.tsx",
     "lib/client.js"
-, "pages/api/stripe.js"  ],
+, "pages/api/stripe.js", "pages/payment_test.js"  ],
   "exclude": [
     "node_modules"
   ]
