--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.21",
+    "@tailwindcss/postcss": "^4.1.11",
+    "@react-aria/interactions": "^3.25.4",
     "firebase": "^12.0.0",
     "firebase-admin": "^13.4.0",
     "motion": "^12.23.6",
