--- a/.env
+++ b/.env
@@ -12,3 +12,5 @@ ONEPAY_ACCESS_CODE=6BEB2546
 ONEPAY_SECRET=6D0870CDE5F24F34F3915FB0045120DB
 
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
+
+VERCEL_URL=https://ecom-ui-liart.vercel.app/
