--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase-admin": "^13.4.0",
     "motion": "^12.23.6",
     "next": "12.2.5",
+    "next-seo": "^6.8.0",
     "postcss": "^8.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
