--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "motion": "^12.23.6",
     "next": "12.2.5",
     "next-seo": "^6.8.0",
+    "nextjs-google-analytics": "^2.3.7",
     "postcss": "^8.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
