--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "postcss": "^8.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-modal": "^3.16.3"
+    "react-modal": "^3.16.3",
+    "react-share": "^5.2.2"
   },
   "devDependencies": {
     "@sanity/client": "^3.4.1",
