--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "firebase-admin": "^13.4.0",
     "motion": "^12.23.6",
     "next": "12.2.5",
+    "next-auth": "^4.24.11",
     "next-seo": "^6.8.0",
     "nextjs-google-analytics": "^2.3.7",
     "postcss": "^8.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-modal": "^3.16.3",
     "react-share": "^5.2.2"
   },
